# slash

./: .gitmodules  CMakeLists.txt
assets/sprites/: hero.aseprite  house.aseprite  tree.aseprite
src/: CMakeLists.txt
src/re/: CMakeLists.txt  re.fbs  sprites.cpp  util.cpp
src/re/include/: re.hpp
src/re/include/re/: sprites.hpp  util.hpp
src/re/pack/: CMakeLists.txt  main.cpp
src/slash/: CMakeLists.txt
